-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
Mac OS X
-
b05f19f23217ebf982f021c71a04b1df73827c35
To reproduce use the attached example.
Example requires ICU libs which you should download from icu-project.org and copy the libs into example's lib folder.
Also you need to set DYLD_LIBRARY_PATH that it points to example's lib folder.
If following define is used then example doesn't crash.
#ifndef Q_MOC_RUN
#include <unicode/coll.h>
#endif
Same example compiles without any issues with Qt4.x, even when Q_MOC_RUN is
not used.
- replaces
-
QTBUG-28466 moc crashes when processing a file that includes an ICU header and is not encoded as UTF-16
-
- Closed
-
For Gerrit Dashboard: QTBUG-29759 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
48373,2 | moc: Fix infinite recursion in macro substitution | stable | qt/qtbase | Status: MERGED | +2 | 0 |