tests/auto/tools/moc/tst_moc.cpp
@@ -2772,7 +2772,6 @@ void tst_Moc::parseDefines()
         }
         if (!qstrcmp(mci.name(), "TestString2")) {
             ++count;
-            qDebug() << mci.value();
             QVERIFY(!qstrcmp(mci.value(), "ParseDefine"));
         }
         if (!qstrcmp(mci.name(), "TestString3")) {
@@ -2781,6 +2780,9 @@ void tst_Moc::parseDefines()
         }
     }
     QVERIFY(count == 3);
+
+    index = mo->indexOfSlot("PD_DEFINE_ITSELF_SUFFIX(int)");
+    QVERIFY(index != -1);
 }
 
 void tst_Moc::preprocessorOnly()
